add header to HTML

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    
+    <h1>Would You Like To Know You're Akan name?</h1>
 
   <script src="js/script.js"></script>
 </body>
