add paragraphs to HTML

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 <body>
     <h1>Would You Like To Know You're Akan name?</h1>
+        <p>A child’s name is determined by factors surrounding his or her birth. 
+           In Ghana, the day of their birth determines which name they get irrespective 
+           of their gender. These Akan names signify the day one is born.</p>
+        <p>That being said, most of us know the date you were born not the actual day.</p>
+        <p>If you'd like find out your akan name, fill in the following form:</p>
 
   <script src="js/script.js"></script>
 </body>
