add bootstrap CDN to HTML

--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Get Your Akan Name</title>
     <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 </head>
 <body>
 
     <h1>Would You Like To Know You're Akan name?</h1>
-        <p>A child’s name is determined by factors surrounding his or her birth. 
-           In Ghana, the day of their birth determines which name they get irrespective 
-           of their gender. These Akan names signify the day one is born.</p>
-        <p>That being said, most of us know the date you were born not the actual day.</p>
-        <p>If you'd like find out your akan name, fill in the following form:</p>
+    <p>A child’s name is determined by factors surrounding his or her birth. 
+       In Ghana, the day of their birth determines which name they get irrespective 
+       of their gender. These Akan names signify the day one is born.</p>
+    <p>That being said, most of us know the date you were born not the actual day.</p>
+    <p>If you'd like find out your akan name, fill in the following form:</p>
 
 
         <form>
