--- a/index.html
+++ b/index.html
@@ -9,32 +9,37 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 </head>
 <body>
+    <div class="container-fluid">
+        <div class="row">
+          <div class="col-sm-8">
+            <h1>Would You Like To Know You're Akan name?</h1>
+            <p>A child’s name is determined by factors surrounding his or her birth.<br> 
+              In Ghana, the day of their birth determines which name they get irrespective<br> 
+              of their gender. These Akan names signify the day one is born.</p>
+            <p>That being said, most of us know the date you were born not the actual day.</p>
+            <p>If you'd like find out your akan name, fill in the following form;</p>
+          </div>  
 
-    <h1>Would You Like To Know You're Akan name?</h1>
-    <p>A child’s name is determined by factors surrounding his or her birth. 
-       In Ghana, the day of their birth determines which name they get irrespective 
-       of their gender. These Akan names signify the day one is born.</p>
-    <p>That being said, most of us know the date you were born not the actual day.</p>
-    <p>If you'd like find out your akan name, fill in the following form:</p>
-
-
-        <form>
-            <label>Date</label>
-            <input type="number" id="dd" name="date" value="Enter the date">
-            <label>Month</label>
-            <input type="number" id="mm" name="month" value="Enter the month">
-            <label>Year</label>
-            <input type="number" id="yy" name="year" value="Enter the year"><br>
-
-        <label>Gender</label>
-            <input type="radio" name="gender" id="male" value="Male">
-		    <label>Male</label>
-		    <input type="radio" name="gender" value="Female" id="female">
-            <label>Female</label>
-            <button type="submit" onclick="getAkanName(); return false;" class="btn btn-primary btn-xs"><i class="fa fa-search" aria-hidden="true"></i>Get Akan Name</button>
-            <button type="reset" onclick="clearAkanMessage(); return false;" class="btn btn-default btn-xs"><i class="fa fa-times" aria-hidden="true"></i>Cancel</button>		
-		</form>	
-
+          <div class="col-sm-4">
+            <form>
+                <label><b>Gender</b></label><br>
+                <input type="radio" name="gender" id="male" value="Male">
+                <label>Male</label>
+                <input type="radio" name="gender" value="Female" id="female">
+                <label>Female</label><br>
+                <br>  
+                <label>Date</label>
+                <input type="number" id="dd" name="date" value="Enter the date"><br><br>
+                <label>Month</label>
+                <input type="number" id="mm" name="month" value="Enter the month"><br><br>
+                <label>Year</label>
+                <input type="number" id="yy" name="year" value="Enter the year"><br><br>
+    
+                <button type="submit" onclick="akanName(); return false;" class="btn btn-success btn-lg">Get Your Akan Name</button>
+            </form>  
+          </div>
+        </div>      
+    </div>
   <script src="js/script.js"></script>
 </body>
 </html>
