--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
 
           <div class="col-sm-4">
             <form>
-                <label><b>Gender</b></label><br>
+                <label id="gndr"><b>Gender</b></label><br>
                 <input type="radio" name="gender" id="male" value="Male">
-                <label>Male</label>
+                <label>Male</label><br>
                 <input type="radio" name="gender" value="Female" id="female">
                 <label>Female</label><br>
                 <br>  
                 <label>Date</label>
-                <input type="number" id="dd" name="date" value="Enter the date"><br><br>
+                <input type="number" id="dd" name="date" value="Enter the date"><br>
                 <label>Month</label>
-                <input type="number" id="mm" name="month" value="Enter the month"><br><br>
+                <input type="number" id="mm" name="month" value="Enter the month"><br>
                 <label>Year</label>
-                <input type="number" id="yy" name="year" value="Enter the year"><br><br>
+                <input type="number" id="yy" name="year" value="Enter the year"><br>
     
                 <button type="submit" onclick="akanName(); return false;" class="btn btn-success btn-lg">Get Your Akan Name</button>
             </form>  
