add akan name paragraph

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           </div>  
 
           <div class="col-sm-4">
-            <form>
+            <form id="akanForm">
                 <label id="gndr"><b>Gender</b></label><br>
                 <input type="radio" name="gender" id="male" value="Male">
                 <label>Male</label><br>
@@ -38,7 +38,12 @@
                 <button type="submit" onclick="akanName(); return false;" class="btn btn-success btn-lg">Get Your Akan Name</button>
             </form>  
           </div>
-        </div>      
+        </div>
+            <p>
+                <div>
+                    
+                </div>
+            </p>
     </div>
   <script src="js/script.js"></script>
 </body>
