add alert textbox

--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
           </div>
         </div>
             <p>
-                <div>
-                    
-                </div>
+              <div class="alertAkan">
+                <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
+                <strong>Danger!</strong> Indicates a dangerous or potentially negative action.
+              </div>
             </p>
     </div>
   <script src="js/script.js"></script>
